# Kingdom-Fall

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  GenUnit.json  Makefile  MyGame_linux_x86_64  MyGame_x86_64_linux  MyTest  README.md  cmake_install.cmake  compile_commands.json  settings.json
cmake/cmake/modules/: hunter_calculate_self.cmake  hunter_initialize.cmake
json/: DefaultUnit.json  DungeonTerrain.json  DwarfRace.json  ElfRace.json  Fields.json  ForestTerrain.json  GameOptions.json  GrassField.json  GrassTerrain.json  HighRockTerrain.json  HumanRace.json  Races.json  RockTerrain.json  SwordsmanType.json  Types.json  UnitDwarfSwordsman.json  UnitHumanSwordsman.json
json/schema/: Ability.json  Ability.json.schema  Field.json  Race.json  Terrain.json  Type.json  Unit.json
maps/: map1.txt  map2.txt  map3.txt  terrain_map.txt  unit_map.txt
src/: CCommand.cpp  CCommand.hpp  CControllerFactory.cpp  CControllerFactory.hpp  CField.cpp  CField.hpp  CGame.cpp  CGame.hpp  CGlobalGame.cpp  CGlobalGame.hpp  CGlobalSingleton.cpp  CGlobalSingleton.hpp  CJsonSerializer.cpp  CJsonSerializer.hpp  CJsonSerializerAdapter.cpp  CJsonSerializerAdapter.hpp  CJsonValidator.cpp  CJsonValidator.hpp  CJsonValidatorAdapter.cpp  CJsonValidatorAdapter.hpp  CMap.cpp  CMap.hpp  CMapCell.cpp  CMapCell.hpp  CObject.cpp  CObject.h  CObject.hpp  CObjectController.cpp  CObjectController.hpp  CObjectFactory.cpp  CObjectFactory.hpp  CObjectFactoryValidateDecorator.cpp  CObjectFactoryValidateDecorator.hpp  CObjectPositionView.cpp  CObjectPositionView.hpp  CObjectProxyView.cpp  CObjectProxyView.hpp  CObjectSelectView.cpp  CObjectSelectView.hpp  CPosition.cpp  (+32 more)
test/: test.cpp  test.hpp  test_settings1.json  test_settings2.json  test_settings3.json  validator_test.cpp
test/data/: map2.txt  map3.txt  map_unit2.txt
